[build-system]
# https://thiblahute.gitlab.io/mesonpep517/
requires = ["mesonpep517", "ninja", "Cython", "wheel<0.35"]
build-backend = "mesonpep517.buildapi"


[tool.mesonpep517.metadata]
author="Jonas Lundholm Bertelsen"
author-email=""
summary="Run Siesta as a subroutine in Python, with ASE bindings"
home-page="https://github.com/jonaslb/psiesta"
requires-python=">=3.6"
description-file="README.md"
requires = ["numpy", "mpi4py", "ase", "sisl"]
